option('aq_qsize', type: 'integer', value: 32,
  description: 'admin command queue size')

option('profiling', type: 'boolean', value: false,
  description: 'enable/disable gprof profiling')

option('examples', type: 'feature', value: 'auto',
  description: 'build examples')

option('libnvme', type: 'combo', value: 'auto',
  choices: ['auto', 'system', 'internal'],
  description: 'how to find the libnvme library')

option('docs', type: 'feature', value: 'auto',
  description: 'build documentation')

option('trace-events-file', type: 'string', value: 'config/trace-events-all',
  description: 'trace events file')
